# world-cup-info

./: .env.sample  README.md  pyproject.toml
world_cup_info/: __init__.py
world_cup_info/utils/: __init__.py  data_processing.py
world_cup_info/utils/validators/: __init__.py
